tests/baselines/reference/interfaceNaming1.errors.txt
==== tests/cases/compiler/interfaceNaming1.ts (4 errors) ====
    interface { }
              ~
!!! error TS1005: ';' expected.
    ~~~~~~~~~
!!! error TS2095: Could not find symbol 'interface'.
    interface interface{ }
    interface & { }
    ~~~~~~~~~
!!! error TS2095: Could not find symbol 'interface'.
                ~~~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    